--- a/src/Makefile.0
+++ b/src/Makefile.0
@@ -1,5 +1,5 @@
 
-#$Id: Makefile.0,v 1.8 1992/11/12 11:38:12 berg Exp $
+#$Id: Makefile.0,v 1.11 1993/02/11 13:10:43 berg Exp $
 
 PM_OBJ=cstdio.$(O) common.$(O) exopen.$(O) goodies.$(O) locking.$(O) \
  mailfold.$(O) misc.$(O) pipes.$(O) regexp.$(O) robust.$(O) sublib.$(O)
@@ -22,13 +22,13 @@ formail: formail.$(O) $(FM_OBJ)
 
 mailstat: ../examples/mailstat
 	cp ../examples/$@ .
-	chmod 0755 $@
+	@chmod 0755 $@
 
 multigram: multigram.$(O) sublib.$(O) ecommon.$(O)
 	$(CC) $(CFLAGS) $@.$(O) sublib.$(O) ecommon.$(O) -o $@ $(LDFLAGS)
 
-../new:
-	@-mkdir $@ 2>$(DEVNULL); exit 0
+../config.check:
+	@cd ..; $(MAKE) config.check
 
 _autotst: _autotst.$(O)
 	$(CC) $(CFLAGS) $@.$(O) -o $@ $(LDFLAGS)
@@ -109,9 +109,9 @@ recommend: recommend.$(O) sublib.$(O)
 
 ../man/man.sed: manconf.c ../autoconf.h ../config.h includes.h procmail.h
 ../man/man.sed: ../patchlevel.h
-	$(CC) $(CFLAGS) -o _autotst manconf.c $(LDFLAGS)
-	./_autotst >$@
-	$(RM) _autotst
+	@$(CC) $(CFLAGS) -o _autotst manconf.c $(LDFLAGS)
+	@./_autotst >$@
+	@$(RM) _autotst
 
 clean:
 	$(RM) procmail.$(O) $(PM_OBJ) lockfile.$(O) $(LF_OBJ) formail.$O \
