--- a/man/Makefile.0
+++ b/man/Makefile.0
@@ -1,5 +1,5 @@
 
-#$Id: Makefile.0,v 1.4 1993/02/10 19:17:47 berg Exp $
+#$Id: Makefile.0,v 1.6 1993/04/13 15:48:19 berg Exp $
 
 all: $(MANSS)
 
@@ -15,11 +15,11 @@ man_sed:
 	@cd ../src; $(MAKE) ../man/man.sed
 
 clean:
-	$(RM) $(MANSS) man.sed _Makefile core
+	$(RM) $(MANSS) man.sed* _Makefile core
 
 Makefile: ../Makefile Makefile.0
 	@echo "You have made changes to the master Makefile, in order for"
-	@echo "these changes to show through, you will have to do first:"
+	@echo "these changes to show through, you will first have to do:"
 	@echo "$(MAKE) makefiles"
 
 makefiles Makefiles makefile:
