--- a/src/Makefile.0
+++ b/src/Makefile.0
@@ -1,5 +1,5 @@
 
-#$Id: Makefile.0,v 1.11 1993/02/11 13:10:43 berg Exp $
+#$Id: Makefile.0,v 1.18 1993/06/25 11:09:33 berg Exp $
 
 PM_OBJ=cstdio.$(O) common.$(O) exopen.$(O) goodies.$(O) locking.$(O) \
  mailfold.$(O) misc.$(O) pipes.$(O) regexp.$(O) robust.$(O) sublib.$(O)
@@ -37,10 +37,16 @@ _autotst: _autotst.$(O)
 HIDEMAKE = $(MAKE)
 
 ../autoconf.h: autoconf Makefile
-	$(SHELL) ./autoconf $(SHELL) "$(RM)" "$(MV)" $(USRINCLUDE) \
-	 $(DEVNULL) "$(FGREP)" "$(HIDEMAKE)" $(O) $@
+	$(SHELL) ./autoconf $(SHELL) "$(RM)" "$(MV)" $(DEVNULL) \
+	 "$(FGREP)" "$(HIDEMAKE)" $(O) "$(LOCKINGTEST)" $@
 
 autoconf.h: ../autoconf.h
+
+targetdir.h:
+	echo "You only can/need to make multigram if you are installing"
+	echo "the mailinglist scripts.	Read ../mailinglist/INSTALL for"
+	echo "more directions."
+	exit 64
 
 common.$(O): ../autoconf.h ../config.h includes.h procmail.h sublib.h robust.h
 common.$(O): shell.h misc.h common.h
@@ -72,16 +78,15 @@ locking.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
 locking.$(O): misc.h exopen.h locking.h
 
 mailfold.$(O): ../autoconf.h ../config.h includes.h procmail.h sublib.h
-mailfold.$(O): robust.h shell.h misc.h pipes.h common.h exopen.h locking.h
-mailfold.$(O): mailfold.h network.h
-
-manconf.$(O): ../patchlevel.h ../autoconf.h ../config.h includes.h procmail.h
+mailfold.$(O): robust.h shell.h misc.h pipes.h common.h exopen.h goodies.h
+mailfold.$(O): locking.h mailfold.h network.h
 
 misc.$(O): ../autoconf.h ../config.h includes.h procmail.h sublib.h robust.h
 misc.$(O): shell.h misc.h pipes.h common.h cstdio.h exopen.h regexp.h goodies.h
 misc.$(O): locking.h mailfold.h
 
 multigram.$(O): ../autoconf.h ../config.h includes.h sublib.h shell.h ecommon.h
+multigram.$(O): targetdir.h
 
 pipes.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
 pipes.$(O): misc.h pipes.h common.h cstdio.h goodies.h mailfold.h
@@ -91,7 +96,7 @@ procmail.$(O): sublib.h robust.h shell.h misc.h pipes.h common.h cstdio.h
 procmail.$(O): exopen.h goodies.h locking.h mailfold.h
 
 regexp.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
-regexp.$(O): regexp.h
+regexp.$(O): misc.h regexp.h
 
 robust.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
 robust.$(O): misc.h mailfold.h shell.h
@@ -109,19 +114,21 @@ recommend: recommend.$(O) sublib.$(O)
 
 ../man/man.sed: manconf.c ../autoconf.h ../config.h includes.h procmail.h
 ../man/man.sed: ../patchlevel.h
-	@$(CC) $(CFLAGS) -o _autotst manconf.c $(LDFLAGS)
-	@./_autotst >$@
+	@$(CC) $(CFLAGS) "-DBINDIR=\"$(BINDIR)\"" -o _autotst manconf.c \
+	 $(LDFLAGS)
+	@./_autotst $@ $@.0 $@.1
 	@$(RM) _autotst
 
 clean:
+	$(RM) -r _locktest
 	$(RM) procmail.$(O) $(PM_OBJ) lockfile.$(O) $(LF_OBJ) formail.$O \
 	 $(FM_OBJ) multigram.$(O) $(BINSS) multigram ../autoconf.h _autotst* \
 	 lookfor _locktst* grepfor recommend recommend.$(O) manconf _Makefile \
-	 lock.log core
+	 lock.log core targetdir.h
 
 Makefile: ../Makefile Makefile.0
 	@echo "You have made changes to the master Makefile, in order for"
-	@echo "these changes to show through, you will have to do first:"
+	@echo "these changes to show through, you will first have to do:"
 	@echo "$(MAKE) makefiles"
 
 makefiles Makefiles makefile:
