--- a/Makefile.1
+++ b/Makefile.1
@@ -1,13 +1,17 @@
-#$Id: Makefile.1,v 1.36 1994/06/06 17:33:15 berg Exp $
-
-HIDEMAKE=$(MAKE)
+#$Id: Makefile.1,v 1.41 1994/08/25 11:50:59 berg Exp $
 
 all: bins mans recommend
+	@echo If you would like to inspect the results before running make \
+install:
+	@echo All installable files can be found in the new/ subdirectory.
 
 make:
 	@$(SHELL) -c "exit 0"
 
 .PRECIOUS: Makefile
+
+help target targets:
+	sed "/^##*\*#$$/,/^##*\*#$$/ !d" <Makefile
 
 bins: config.check src/Makefile
 	cd src; $(MAKE) $(NBINS)
@@ -85,9 +89,17 @@ install.man: $(MANS) $(BASENAME)
 	@-mkdir $(MAN5DIR) 2>$(DEVNULL); exit 0
 	@chmod 0644 $(MANS)
 	@for a in $(MANS1S); \
-	  do $(INSTALL) new/$$a.1 $(MAN1DIR)/$$a.$(MAN1SUFFIX); done
+	  do $(INSTALL) new/$$a.1 $(MAN1DIR)/$$a.$(MAN1SUFFIX); \
+	     if test "X$(MANCOMPRESS)" != "X"; \
+	     then $(MANCOMPRESS) <new/$$a.1 >$(MAN1DIR)/$$a.$(MAN1SUFFIX); \
+	     else :; fi; \
+	  done
 	@for a in $(MANS5S); \
-	  do $(INSTALL) new/$$a.5 $(MAN5DIR)/$$a.$(MAN5SUFFIX); done
+	  do $(INSTALL) new/$$a.5 $(MAN5DIR)/$$a.$(MAN5SUFFIX); \
+	     if test "X$(MANCOMPRESS)" != "X"; \
+	     then $(MANCOMPRESS) <new/$$a.5 >$(MAN5DIR)/$$a.$(MAN5SUFFIX); \
+	     else :; fi; \
+	  done
 	echo Housekeeping file >install.man
 
 install.bin: $(BINS) $(BASENAME)
@@ -143,6 +155,6 @@ man/Makefile src/Makefile Makefile: Makefile.1 initmake
 	cat Makefile.0 >>_Makefile
 	$(MV) _Makefile Makefile
 	$(RM) Makefile.0
-	$(HIDEMAKE) init
+	$(MAKE) init
 
 init makefiles Makefiles makefile: man/Makefile src/Makefile
