--- a/man/Makefile
+++ b/man/Makefile
@@ -1,9 +1,7 @@
-#$Id: Makefile,v 1.6 1994/05/26 14:11:57 berg Exp $
-
-HIDEMAKE=$(MAKE)
+#$Id: Makefile,v 1.7 1994/08/24 18:52:00 berg Exp $
 
 all: init
-	$(HIDEMAKE) make $@
+	$(MAKE) make $@
 
 # The only real thing that can be made right now is:
 
@@ -15,4 +13,4 @@ init:
 Makefile makefile Makefiles makefiles: init
 
 procmail.1 procmailrc.5 procmailsc.5 procmailex.5 lockfile.1 formail.1: init
-	$(HIDEMAKE) make $@
+	$(MAKE) make $@
