--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,7 @@
-#$Id: Makefile,v 1.7 1994/05/26 14:12:19 berg Exp $
-
-HIDEMAKE=$(MAKE)
+#$Id: Makefile,v 1.8 1994/08/24 18:52:04 berg Exp $
 
 all: init
-	$(HIDEMAKE) make $@
+	$(MAKE) make $@
 
 # The only real thing that can be made right now is:
 
@@ -16,4 +14,4 @@ Makefile makefile Makefiles makefiles: init
 
 procmail lockfile formail multigram mailstat setid ../autoconf.h \
 autoconf.h: init
-	$(HIDEMAKE) make $@
+	$(MAKE) make $@
