--- a/man/Makefile.0
+++ b/man/Makefile.0
@@ -1,5 +1,5 @@
 
-#$Id: Makefile.0,v 1.8 1994/05/26 14:11:59 berg Exp $
+#$Id: Makefile.0,v 1.9 1994/09/27 15:03:36 berg Exp $
 
 all: $(MANSS)
 
@@ -17,7 +17,7 @@ man_sed:
 	@cd ../src; $(MAKE) ../man/man.sed
 
 clean:
-	$(RM) $(MANSS) man.sed* _Makefile core
+	$(RM) $(MANSS) man.sed* _Makefile *core*
 
 Makefile: ../Makefile Makefile.0
 	@echo "You have made changes to the master Makefile, in order for"
