--- a/src/Makefile.0
+++ b/src/Makefile.0
@@ -1,5 +1,5 @@
 
-#$Id: Makefile.0,v 1.36 1994/08/24 18:52:05 berg Exp $
+#$Id: Makefile.0,v 1.40 1994/09/28 19:58:36 berg Exp $
 
 PM_OBJ=cstdio.$(O) common.$(O) exopen.$(O) goodies.$(O) locking.$(O) \
  mailfold.$(O) misc.$(O) pipes.$(O) regexp.$(O) robust.$(O) sublib.$(O) \
@@ -26,7 +26,7 @@ formail: formail.$(O) $(FM_OBJ)
 	$(CC) $(CFLAGS) $@.$(O) $(FM_OBJ) -o $@ $(LDFLAGS)
 
 mailstat: ../examples/mailstat
-	cp ../examples/$@ .
+	cp ../examples/$@ $@
 	@chmod 0755 $@
 
 multigram: multigram.$(O) $(MG_OBJ) setid
@@ -88,13 +88,13 @@ locking.$(O): misc.h pipes.h exopen.h locking.h lastdirsep.h
 
 mailfold.$(O): ../autoconf.h ../config.h includes.h procmail.h acommon.h
 mailfold.$(O): sublib.h robust.h shell.h misc.h pipes.h common.h exopen.h
-mailfold.$(O): goodies.h locking.h mailfold.h network.h
+mailfold.$(O): goodies.h locking.h mailfold.h
 
 mcommon.$(O): ../autoconf.h ../config.h includes.h mcommon.h
 
 misc.$(O): ../autoconf.h ../config.h includes.h procmail.h acommon.h sublib.h
 misc.$(O): robust.h shell.h misc.h pipes.h common.h cstdio.h exopen.h regexp.h
-misc.$(O): mcommon.h goodies.h locking.h mailfold.h
+misc.$(O): mcommon.h goodies.h locking.h network.h mailfold.h lastdirsep.h
 
 multigram.$(O): ../autoconf.h ../config.h includes.h sublib.h hsort.h shell.h
 multigram.$(O): ecommon.h mcommon.h lastdirsep.h targetdir.h
@@ -109,7 +109,7 @@ procmail.$(O): cstdio.h exopen.h regexp.h mcommon.h goodies.h locking.h
 procmail.$(O): mailfold.h lastdirsep.h
 
 regexp.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
-regexp.$(O): misc.h regexp.h
+regexp.$(O): misc.h regexp.h goodies.h
 
 robust.$(O): ../autoconf.h ../config.h includes.h procmail.h robust.h shell.h
 robust.$(O): misc.h pipes.h common.h mailfold.h shell.h
